# procedural-map-generator

./: .gitignore  README.md  chunk.cpp  chunk.hpp  chunk_renderer.cpp  chunk_renderer.hpp  config.txt  confparse.hpp  development.sh  engine.cpp  engine.hpp  logger.h  main.cpp  meson.build  noise.cpp  noise.hpp
data/: biomes.txt  config.txt
data/alternate/: biomes.txt  config.txt
include/: confparse.hpp  csscolorparser.hpp
src/: chunk.cpp  chunk.hpp  chunk_renderer.cpp  chunk_renderer.hpp  csscolorparser.cpp  engine.cpp  engine.hpp  main.cpp  meson.build  noise.cpp  noise.hpp  registries.cpp  registries.hpp
